# C-Socket

./: .gitignore  CMakeLists.txt
examples/: tcp_examples.cpp
include/: socket.h  types.h
src/: socket.cpp
